# bpaint

./: .gitignore  CMakeLists.txt  README.md
examples/march/: CMakeLists.txt
examples/march/src/: main.c
include/bpaint/: alias.h  bpaint.h  canvas.h  hash.h  macros.h  noise.h  sdf.h  shade.h  shade_func.h  tonemap.h  utils.h  v2.h  v3.h  v4.h
include/bpaint/formats/: bmp.h  format.h  raw.h
src/: canvas.c  hash.c  main.c  noise.c  sdf.c  shade.c  tonemap.c  utils.c  v2.c  v3.c  v4.c
src/formats/: bmp.c  raw.c
